--- a/index.html
+++ b/index.html
@@ -6,5 +6,51 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="hero-section">
+      <div class="hero-container">
+        <nav class="nav-bar">
+          <ul>
+            <div class="left-nav">
+              <a href="#"><li id="fitness">Fitness</li></a>
+            </div>
+            <div class="right-nav">
+              <a href="#"><li id="home">Home</li></a>
+              <a href="#"><li>Service</li></a>
+              <a href="#"><li>Contact</li></a>
+              <a href="#"><li>About</li></a>
+            </div>
+            <div class="hamburger-menu">
+              <img src="./images/hamburger.png" alt="" />
+            </div>
+          </ul>
+        </nav>
+        <div class="hero-content-container">
+          <div>
+            <h2>Get body in <span id="shape">shape</span> & stay healthy</h2>
+            <p>
+              A huge selection of health and fitness content, healthy recipes
+              and transformation stories to help you get fit and stay fit!
+            </p>
+            <button id="join-button">Join Club Now!</button>
+            <button id="download-app-button">Download App</button>
+          </div>
+          <div class="hero-img-container">
+            <img src="./images/Images 2.png" alt="" />
+            <button class="image-button-content" id="image-button-1">
+              <span id="five-hundred">500+</span>
+              <span>Free Workout Videos</span>
+            </button>
+            <button class="image-button-2" id="image-button-2">
+              <div class="orange"></div>
+              <div class="image-button-content">
+                <span id="three-hundred">350+</span>
+                <span>Video Tutorial</span>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
