done with hero section for small screen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
               <a href="#"><li>About</li></a>
             </div>
             <div class="hamburger-menu">
-              <img src="./images/hamburger.png" alt="" />
+              <img
+                width="24"
+                height="24"
+                src="https://img.icons8.com/ios-filled/24/FFFFFF/menu--v6.png"
+                alt="menu--v6"
+              />
             </div>
           </ul>
         </nav>
@@ -32,8 +37,10 @@
               A huge selection of health and fitness content, healthy recipes
               and transformation stories to help you get fit and stay fit!
             </p>
-            <button id="join-button">Join Club Now!</button>
-            <button id="download-app-button">Download App</button>
+            <div class="join-download-div">
+              <button id="join-button">Join Club Now!</button>
+              <button id="download-app-button">Download App</button>
+            </div>
           </div>
           <div class="hero-img-container">
             <img src="./images/Images 2.png" alt="" />
@@ -42,7 +49,9 @@
               <span>Free Workout Videos</span>
             </button>
             <button class="image-button-2" id="image-button-2">
-              <div class="orange"></div>
+              <div class="orange">
+                <div class="triangle"></div>
+              </div>
               <div class="image-button-content">
                 <span id="three-hundred">350+</span>
                 <span>Video Tutorial</span>
