--- a/index.html
+++ b/index.html
@@ -61,5 +61,54 @@
         </div>
       </div>
     </header>
+    <section class="section-container">
+      <section class="habit-section">
+        <h1>Change Your Habits</h1>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or access to a gym.
+        </p>
+        <div class="cards">
+          <div class="card">
+            <div><img src="./images/image 3.png" alt="" /></div>
+            <h4>Movement</h4>
+            <p>Build up the habit of walking at least 30 minutes everyday.</p>
+          </div>
+          <div class="card">
+            <div><img src="./images/image 2.png" alt="" /></div>
+            <h4>Time</h4>
+            <p>Maintain a routine of enough sleep and work.</p>
+          </div>
+          <div class="card">
+            <div><img src="./images/image 4.png" alt="" /></div>
+            <h4>Practice</h4>
+            <p>Consistency will always be better than motivation.</p>
+          </div>
+          <div class="card">
+            <div><img src="./images/image 5.png" alt="" /></div>
+            <h4>Weight Loss</h4>
+            <p>Stay in a caloric deficit to lose weight effectively.</p>
+          </div>
+        </div>
+      </section>
+    </section>
+    <div class="section-container">
+      <div class="run-easily-container">
+        <div class="run-easily-content">
+          <h1>Run an Extra <br />Mile Easily</h1>
+          <p>
+            Running for at least 10 minutes a day can significantly lower your
+            risk of cardiovascular disease. Many people run because they want to
+            feel better. The exercise helps boost your mood, concentration, and
+            overall quality of life. Join our weekly 2 mile running program and
+            get the best output for your health.
+          </p>
+          <button type="button">Join Now</button>
+        </div>
+        <div class="r-e-c-image">
+          <img src="./images/run.jpg" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
