--- a/index.html
+++ b/index.html
@@ -110,5 +110,83 @@
         </div>
       </div>
     </div>
+    <div class="section-container">
+      <div class="bmi-article">
+        <h3>BMI calculator</h3>
+        <p>
+          BMI is a measurement of a person's leanness or corpulence based on
+          their height and weight, and is intended to quantify tissue mass. It
+          is widely used as a general indicator of whether a person has a
+          healthy body weight for their height.
+        </p>
+      </div>
+      <div class="chart-calculation-container">
+        <div class="bmi-chart">
+          <h3>BMI Calculator Chart</h3>
+          <table class="bmi-table">
+            <thead>
+              <tr>
+                <th>BMI</th>
+                <th>Weight Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Below 18.5</td>
+                <td>Underweight</td>
+              </tr>
+              <tr>
+                <td>18.5 - 24.9</td>
+                <td>Healthy</td>
+              </tr>
+              <tr>
+                <td>25.0 - 29.9</td>
+                <td>Overweight</td>
+              </tr>
+              <tr>
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="calculate-chart">
+          <h3>Calculate your BMI</h3>
+          <p>
+            We have our own calculator to measure your BMI. Try it for yourself!
+          </p>
+          <form action="" class="bmi-form">
+            <div class="height-weight-input">
+              <input
+                type="number"
+                name="height"
+                id="height"
+                placeholder="Height/cm"
+              />
+              <input
+                type="number"
+                name="weight"
+                id="weight"
+                placeholder="Weight/kg"
+              />
+            </div>
+            <div class="age-sex-input">
+              <input type="number" name="age" id="age" placeholder="Age" />
+              <select name="sex" id="sex">
+                <option value="">Sex</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+              </select>
+            </div>
+            <select name="factor" id="factor">
+              <option value="">Select an activity factor</option>
+              <option value="hiit">HIIT</option>
+              <option value="weight">Weight training</option>
+            </select>
+          </form>
+          <button>Calculate</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
