done with team section

--- a/index.html
+++ b/index.html
@@ -188,5 +188,70 @@
         </div>
       </div>
     </div>
+    <div class="section-container" style="padding-bottom: 88px">
+      <div class="meet-article">
+        <h3>Meet Our Team</h3>
+        <p>
+          We have a dedicated team of professional trainers who will help you
+          train and reach your goals.
+        </p>
+      </div>
+      <div class="trainers">
+        <div class="trainer-card">
+          <div class="image-container">
+            <img src="./images/trainer1.png" alt="" />
+          </div>
+          <div class="trainer-details">
+            <h3>Jerome Bell</h3>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-card">
+          <div class="image-container">
+            <img src="./images/trainer2.png" alt="" />
+          </div>
+          <div class="trainer-details">
+            <h3>Cameron Will</h3>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-card">
+          <div class="image-container">
+            <img src="./images/trainer3.png" alt="" />
+          </div>
+          <div class="trainer-details">
+            <h3>Darell Steward</h3>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-card">
+          <div class="image-container">
+            <img id="img-4" src="./images/trainer4.png" alt="" />
+          </div>
+          <div class="trainer-details">
+            <h3>Dianne Russell</h3>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-card">
+          <div class="image-container">
+            <img src="./images/trainer5.png" alt="" />
+          </div>
+          <div class="trainer-details">
+            <h3>Cody Fisher</h3>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-card">
+          <div class="image-container">
+            <img id="img-6" src="./images/trainer6.png" alt="" />
+          </div>
+          <div class="trainer-details">
+            <h3>Theresa Webb</h3>
+            <p>Trainer</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
