done with footer section

--- a/index.html
+++ b/index.html
@@ -253,5 +253,37 @@
         </div>
       </div>
     </div>
+    <div class="footer section-container">
+      <div class="footer-container">
+        <div class="first-footer">
+          <h3>Fitness</h3>
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
+        </div>
+        <div class="second-footer">
+          <h3>Get Started</h3>
+          <ul>
+            <li>Service</li>
+            <li>Contact us</li>
+            <li>Affiliate Program</li>
+            <li>About Us</li>
+          </ul>
+        </div>
+        <div class="third-footer">
+          <h3>Get Started</h3>
+          <ul>
+            <li>Fitness</li>
+            <li>Platform</li>
+            <li>Workout Library</li>
+            <li>App Design</li>
+          </ul>
+        </div>
+      </div>
+      <hr />
+      <p class="end-credit">All right reserved @Fitness 2024</p>
+    </div>
   </body>
 </html>
