added unique section

--- a/index.html
+++ b/index.html
@@ -253,6 +253,93 @@
         </div>
       </div>
     </div>
+    <div
+      class="section-container"
+      style="padding-bottom: 88px; background-color: rgba(44, 44, 44, 1)"
+    >
+      <div class="video-article">
+        <h3>Our Video Library</h3>
+        <p>
+          We have a library of videos on workouts which are scientifically
+          proven to give you the most hyperthrophic results. Watch Dr. Mike, a
+          sports science professor explaining everything in leyman terms.
+        </p>
+      </div>
+      <div class="videos">
+        <div class="trainer-card right-video">
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/8t2a93BjDec?si=1JSQLZDh3MDJq9KN"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="trainer-card left-video">
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/aYPNWwsNBkA?si=1NcfD6P9KfZOR3Et"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="trainer-card right-video">
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/lhPfshXO-3s?si=mtbT_ntAvCT-2NeI"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="trainer-card left-video">
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/NsEbXsTwas8?si=FzTRAlsmx8QeFNQR"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="trainer-card right-video">
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/V3h_1IUY-f0?si=sjxlvbYHG54Vayhy"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="trainer-card left-video">
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/21lYP86dHW4?si=SYOEFP9gwS7fpFGC"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="footer section-container">
       <div class="footer-container">
         <div class="first-footer">
