--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
               and transformation stories to help you get fit and stay fit!
             </p>
             <div class="join-download-div">
-              <button id="join-button">Join Club Now!</button>
-              <button id="download-app-button">Download App</button>
+              <a href="https://www.google.com" target="_blank"
+                ><button id="join-button">Join Club Now!</button></a
+              >
+              <a href="https://www.google.com" target="_blank"
+                ><button id="download-app-button">Download App</button></a
+              >
             </div>
           </div>
           <div class="hero-img-container">
@@ -103,7 +107,9 @@
             overall quality of life. Join our weekly 2 mile running program and
             get the best output for your health.
           </p>
-          <button type="button">Join Now</button>
+          <a href="https://www.google.com" target="_blank"
+            ><button type="button">Join Now</button></a
+          >
         </div>
         <div class="r-e-c-image">
           <img src="./images/run.jpg" alt="" />
@@ -161,17 +167,28 @@
                 type="number"
                 name="height"
                 id="height"
+                min="1"
+                max="300"
                 placeholder="Height/cm"
               />
               <input
                 type="number"
                 name="weight"
                 id="weight"
+                min="5"
+                max="300"
                 placeholder="Weight/kg"
               />
             </div>
             <div class="age-sex-input">
-              <input type="number" name="age" id="age" placeholder="Age" />
+              <input
+                type="number"
+                name="age"
+                id="age"
+                placeholder="Age"
+                min="0"
+                max="200"
+              />
               <select name="sex" id="sex">
                 <option value="">Sex</option>
                 <option value="male">Male</option>
@@ -184,7 +201,7 @@
               <option value="weight">Weight training</option>
             </select>
           </form>
-          <button>Calculate</button>
+          <a href="#"><button>Calculate</button></a>
         </div>
       </div>
     </div>
@@ -339,6 +356,13 @@
           </div>
         </div>
       </div>
+      <div class="youtube-button">
+        <a
+          href="https://www.youtube.com/@RenaissancePeriodization"
+          target="_blank"
+          ><button>Our Youtube Channel</button></a
+        >
+      </div>
     </div>
     <div class="footer section-container">
       <div class="footer-container">
@@ -353,19 +377,19 @@
         <div class="second-footer">
           <h3>Get Started</h3>
           <ul>
-            <li>Service</li>
-            <li>Contact us</li>
-            <li>Affiliate Program</li>
-            <li>About Us</li>
+            <a href="#"><li>Service</li></a>
+            <a href="#"><li>Contact us</li></a>
+            <a href="#"><li>Affiliate Program</li></a>
+            <a href="#"><li>About Us</li></a>
           </ul>
         </div>
         <div class="third-footer">
           <h3>Get Started</h3>
           <ul>
-            <li>Fitness</li>
-            <li>Platform</li>
-            <li>Workout Library</li>
-            <li>App Design</li>
+            <a href="#"><li>Fitness</li></a>
+            <a href="#"><li>Platform</li></a>
+            <a href="#"><li>Workout Library</li></a>
+            <a href="#"><li>App Design</li></a>
           </ul>
         </div>
       </div>
