--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <title>Fitness GYM</title>
   </head>
   <body>
     <header class="hero-section">
@@ -214,7 +215,7 @@
         </p>
       </div>
       <div class="trainers">
-        <div class="trainer-card">
+        <div class="trainer-card" id="trainer-1">
           <div class="image-container">
             <img src="./images/trainer1.png" alt="" />
           </div>
@@ -223,7 +224,7 @@
             <p>Trainer</p>
           </div>
         </div>
-        <div class="trainer-card">
+        <div class="trainer-card" id="trainer-2">
           <div class="image-container">
             <img src="./images/trainer2.png" alt="" />
           </div>
@@ -232,7 +233,7 @@
             <p>Trainer</p>
           </div>
         </div>
-        <div class="trainer-card">
+        <div class="trainer-card" id="trainer-3">
           <div class="image-container">
             <img src="./images/trainer3.png" alt="" />
           </div>
@@ -241,7 +242,7 @@
             <p>Trainer</p>
           </div>
         </div>
-        <div class="trainer-card">
+        <div class="trainer-card" id="trainer-4">
           <div class="image-container">
             <img id="img-4" src="./images/trainer4.png" alt="" />
           </div>
@@ -250,7 +251,7 @@
             <p>Trainer</p>
           </div>
         </div>
-        <div class="trainer-card">
+        <div class="trainer-card" id="trainer-5">
           <div class="image-container">
             <img src="./images/trainer5.png" alt="" />
           </div>
@@ -259,7 +260,7 @@
             <p>Trainer</p>
           </div>
         </div>
-        <div class="trainer-card">
+        <div class="trainer-card" id="trainer-6">
           <div class="image-container">
             <img id="img-6" src="./images/trainer6.png" alt="" />
           </div>
